install-istio/sample-config.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: bookinfo-gateway
  spec:
    selector:
      istio: ingressgateway # use istio default controller
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: bookinfo
  spec:
    hosts:
    - "*"
    gateways:
    - bookinfo-gateway
    http:
    - match:
      - uri:
          exact: /productpage
      - uri:
          exact: /login
      - uri:
          exact: /logout
      - uri:
          prefix: /api/v1/products
      route:
      - destination:
          host: productpage
          port:
            number: 9080

- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: productpage
  spec:
    hosts:
    - productpage
    http:
    - route:
      - destination:
          host: productpage
          subset: v1

- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: reviews
  spec:
    hosts:
    - reviews
    http:
    - route:
      - destination:
          host: reviews
          subset: v1

- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: ratings
  spec:
    hosts:
    - ratings
    http:
    - route:
      - destination:
          host: ratings
          subset: v1

- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: details
  spec:
    hosts:
    - details
    http:
    - route:
      - destination:
          host: details
          subset: v1

- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: productpage
  spec:
    host: productpage
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1

- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: reviews
  spec:
    host: reviews
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3

- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: ratings
  spec:
    host: ratings
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: details
  spec:
    host: details
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
